# parallel_corpus_tool

./: Cargo.toml  LICENSE  README.md
data/: simple_align  simple_toks.en  tu-lines.th  tu-links  tu-toks.th
src/: bi_rtoks.rs  bi_text.rs  config.rs  lang.rs  lib.rs  link.rs  phrase_pair_with_tok_index.rs  reader.rs  rtok.rs  rtoks_builder.rs  textunit.rs  utf16.rs
