[package]
name = "parallel_corpus_tool"
version = "0.1.0"
authors = ["Vee Satayamas <vee.sa@protonmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
config = "0.9"
regex = "1"
lazy_static = "1.3.0"
quick-error = "1.2.2"
rayon = "1.1.0"
